fix: content overflowing page due to MobileMenu placed below the bottom

--- a/packages/client/src/styles/globals.css
+++ b/packages/client/src/styles/globals.css
@@ -8,6 +8,8 @@
   --background-secondary: #e6e6e6;
 
   --accent-600: #9333ea;
+
+  overflow: hidden;
 }
 
 :root.dark {
